@@ -3,6 +3,8 @@
   Bug fixes:
        - Fix replace_constructor warning to actually work if you make your
          application class immutable without that option.
+       - Fix POD to refer to ->config(key => $val), rather than
+         ->config->{key} = $val, as the latter form is deprecated.
 
   Refactoring / cleanups:
        - Deleted the Restarter engine and its Watcher code. Use the
